[gd_scene load_steps=11 format=3 uid="uid://dgv8bmdf307lq"]

[ext_resource type="Script" path="res://Player.gd" id="1_e5mh1"]
[ext_resource type="Texture2D" uid="uid://djqymgjb4yado" path="res://icon.svg" id="1_x2qoe"]
[ext_resource type="Script" path="res://bola.gd" id="3_gobwq"]
[ext_resource type="Script" path="res://game_controller.gd" id="5_k6pfx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62frg"]
size = Vector2(20, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0gnm"]
size = Vector2(1365, 167)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1p6d"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okq5t"]
size = Vector2(38, 38)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vmqw"]
bg_color = Color(0.69, 0.69, 0.69, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bi68"]
size = Vector2(124, 1004)

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(-535, 0)
collision_mask = 5
script = ExtResource("1_e5mh1")
inputCima = "w"
inputBaixo = "s"

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
self_modulate = Color(100, 100, 100, 1)
scale = Vector2(0.1875, 1)
texture = ExtResource("1_x2qoe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_62frg")

[node name="CharacterBody2D2" type="CharacterBody2D" parent="."]
position = Vector2(535, 0)
collision_mask = 5
script = ExtResource("1_e5mh1")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D2"]
self_modulate = Color(100, 100, 100, 1)
scale = Vector2(0.1875, 1)
texture = ExtResource("1_x2qoe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D2"]
shape = SubResource("RectangleShape2D_62frg")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -407.5)
shape = SubResource("RectangleShape2D_u0gnm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 408)
shape = SubResource("RectangleShape2D_u0gnm")

[node name="Bola" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 5
script = ExtResource("3_gobwq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bola"]
shape = SubResource("RectangleShape2D_q1p6d")

[node name="Sprite2D" type="Sprite2D" parent="Bola"]
self_modulate = Color(100, 100, 100, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_x2qoe")

[node name="Lado" type="Area2D" parent="Bola"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bola/Lado"]
shape = SubResource("RectangleShape2D_okq5t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(25, 0)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8vmqw")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 383.0
offset_top = 51.0
offset_right = 521.0
offset_bottom = 217.0
theme_override_font_sizes/font_size = 121
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 612.0
offset_top = 51.0
offset_right = 750.0
offset_bottom = 217.0
theme_override_font_sizes/font_size = 121
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameController" type="Node" parent="."]
script = ExtResource("5_k6pfx")

[node name="Area2D" type="Area2D" parent="GameController"]
position = Vector2(711, 0)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameController/Area2D"]
shape = SubResource("RectangleShape2D_7bi68")

[node name="Area2D2" type="Area2D" parent="GameController"]
position = Vector2(-726, 0)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameController/Area2D2"]
shape = SubResource("RectangleShape2D_7bi68")

[connection signal="body_entered" from="Bola/Lado" to="Bola" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="GameController/Area2D" to="GameController" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="GameController/Area2D2" to="GameController" method="_on_area_2d_2_body_entered"]
